final major update: fix cutoff country names, adjust hover effect, fix 0.00 democracy index (now displays as unknown, add instruction box, animate country title size, fix popovers, add exit button after country click, grid alignment fixed, year flag moved to centre of graphs, year labels in black, add gini display, add averages to indicator graph, add intro text

--- a/a4/css/style.css
+++ b/a4/css/style.css
@@ -2,7 +2,7 @@
 /*-----THE BASICS-----*/
 html {
     overflow-y: scroll;
-    /*overflow-x: hidden;*/
+    overflow-x: visible;
     background-color: white;
 }
 
@@ -105,8 +105,6 @@ select:focus {
 #svgAxes {
     /*visibility: hidden;*/
 }
-
-
 
 .colscroll {
     /*position: relative;*/
